# pico-pulse-gen

./: Button.c  Button.h  CMakeLists.txt  README.md  main.c
pcb/: README.md  fp-lib-table  pico-pulse-gen.kicad_pcb  pico-pulse-gen.kicad_pro  pico-pulse-gen.kicad_sch  slide-switch.kicad_sym  sym-lib-table
pcb/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
pcb/connector_motm.pretty/: connector_motm.kicad_mod
pcb/slide-switch.pretty/: slide_switch_e61218.kicad_mod
